# CTRL

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.md  PRODUCT.md  README-OPC-PLATFORM.md  README.md  START_IMPLEMENTATION.md  commitlint.config.cjs  index.html  package-lock.json  package.json  pool.html  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  workspace.html
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.husky/: commit-msg  post-merge  pre-commit  pre-push
.olym/: CLAUDE.md  GETTING-STARTED.md  VERSION  olym-handbook.md  team-roles.md
THIRD_PARTY_LICENSES/: kairo-MIT.txt
agents/: dike.md  themis.md
brand/: brand-tokens.md
commands/: olym-eod.md  olym-init.md
ctrl-skills/: LICENSE  README.md  skills.sh.json
doc/: audit-2026-05-30-phase-1-readiness.md  brainstorm-irisy-assist-2026-05-30.md  brainstorm-workbench-flexibility-2026-05-26.md  commercial-assessment-market-strategy.md  deployment-strategy-analysis.md  documentation-update-summary.md  first-user-setup.md  flomo-integration-guide.md  hermes-agent-analysis.md  irisy-local-install.md  irisy-walk-through.md  irisy.md  keycap-ideas-record.md  minimax-token-status.md  new-keycap-projects-research.md  next-action-plan.md  opc-concrete-conveyance.md  opc-platform-implementation-plan.md  opc-platform-implementation-summary.md  opc-unified-base-design.md  openai-realtime-feishu-cli-research.md  product-spec.md  setup-byok-key.md  setup-cf-account.md  setup-github-token.md  setup-logseq-lazy-install.md
examples/: usage-example.ts
hooks/: hooks.json
scripts/: adr-check.py  audit-all.sh  audit-olym-dogfood.mjs  audit-olym-ssot-drift.mjs  audit-olympus-health.mjs  auto-validate.sh  bump-version.mjs  check-adr-acceptance.sh  check-governance.mjs  daily-digest.mjs  dev.ps1  escape-cjk.mjs  fleet-status.sh  gen-endpoint-catalog.mjs  git-new.sh  handoff-sync.sh  handoffs-archive.mjs  handoffs-index.js  keycap-to-mcp-rename.sh  olym-doctor.sh  olym-install.sh  pre-push-check.js  pre-push-dispatch-check.mjs  ratchet-dual-surface.mjs  release.ps1  release.sh  scratch-new.sh  specs-archive.mjs  specs-index.mjs  (+3 more)
share/modules/ctrl-websearch/: README.md  manifest.json  pyproject.toml  server.py
src-tauri/: Cargo.toml  Info.plist  build.rs  cbindgen.toml  ctrl.config.toml.example  tauri.conf.json
src-tauri/capabilities/: default.json  keychain.json
src-tauri/icons/: icon.icns
src-tauri/src/: asset_scheme.rs  credential_vault.rs  ctrl.udl  error.rs  lib.rs  main.rs
src-tauri/src/actors/: keycap_actor.rs  mcp_server_actor.rs  mod.rs  subprocess_actor.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/inbound/: kernel_commands.rs  mod.rs  tauri_commands.rs
src-tauri/src/adapters/outbound/: browser.rs  clipboard.rs  clock.rs  manifest_loader.rs  mod.rs  notifier.rs
src-tauri/src/adapters/outbound/config/: file_store.rs  keychain.rs  mod.rs
src-tauri/src/adapters/outbound/llm/: anthropic.rs  gateway.rs  mod.rs  openai_compatible.rs
src-tauri/src/adapters/outbound/macos/: accessibility.rs  capture.rs  keyboard.rs  mod.rs
src-tauri/src/adapters/outbound/tauri/: event_bus.rs
src-tauri/src/application/: mod.rs  ports.rs  step_runner.rs  use_cases.rs
src-tauri/src/commands/: agents.rs  brain.rs  chat.rs  cloud_catalog.rs  code_space.rs  coding.rs  config.rs  draft.rs  draft_run.rs  event_stream.rs  gate.rs  git.rs  hermes_acp.rs  hermes_chat.rs  image.rs  irisy.rs  irisy_chat.rs  irisy_synth.rs  kernel.rs  keychain.rs  memory.rs  mod.rs  notes_ui.rs  notes_ui_scan.rs  obsidian.rs  opencode_chat.rs  pack_registry.rs  pi_rpc.rs  provider.rs  provider_models.rs  provider_templates.rs  review.rs  screenshot.rs  skills.rs  storage.rs  stss.rs  system.rs  updater.rs  vault.rs  vault_embeddings.rs  (+1 more)
src-tauri/src/domain/: detector.rs  events.rs  mod.rs  tool.rs
src-tauri/src/ffi/: mod.rs  native.rs
src-tauri/src/kernel/: actor.rs  ai_column.rs  audit.rs  brain_config.rs  brain_router.rs  cache.rs  calendar_source.rs  capability.rs  capability_resolver.rs  channel.rs  composition.rs  effect.rs  event.rs  event_ws.rs  ghostfolio_source.rs  keycap_capture.rs  llm_port.rs  local_storage.rs  manifest_source.rs  mcp_capture.rs  mcp_host.rs  mcp_server.rs  mod.rs  openapi.rs  pack_auth.rs  pack_provision.rs  pack_publish.rs  pack_sandbox.rs  pack_validate.rs  periodic_notes.rs  persistence.rs  pipeline_e2e.rs  projector.rs  query.rs  review_gate.rs  runtime.rs  runtime_sources.rs  sandbox.rs  scheduler.rs  smart_table_index.rs  (+18 more)
src-tauri/src/kernel/llm_adapters/: anthropic_http.rs  claude_cli.rs  local_config.rs  mod.rs  openai_shape.rs
src-tauri/src/kernel/provider/: detect.rs  http_endpoint.rs  legacy_config.rs  manifest.rs  mod.rs  ollama_embed.rs  path_resolver.rs  provider-templates.json  registry.rs  routing.rs  trait.rs  types.rs  verify.rs
src-tauri/src/kernel/provider/adapter/: http_api.rs  mod.rs
src-tauri/src/kernel/provider/adapter/api/: fal_ai.rs  mod.rs
src-tauri/src/kernel/provider/adapter/cli/: claude_persistent.rs  mod.rs  one_shot.rs
src-tauri/src/kernel/provider/adapter/rest/: anthropic.rs  common.rs  google.rs  http_client.rs  mod.rs  ollama.rs  openai.rs  sink.rs
src-tauri/src/kernel/provider/builtin/: anthropic-api.toml  claude-oauth.toml  deepseek.toml  google.toml  kimi.toml  ollama.toml  openai-api.toml  volc-byok.toml  volc.toml
src-tauri/src/kernel/vault_seed/: daily-notes.yaml  irisy-playbook.md  irisy-reflect-prompt.md  irisy-soul.md  sourcing-prompt.md  sourcing.yaml  template-daily.md  template-meeting.md
src-tauri/src/shell/: acp_client.rs  agent_installer.rs  agent_launcher.rs  asset_protocol.rs  ax_prompt.rs  bootstrap.rs  brain_supervisor.rs  builtin_keycaps.rs  builtin_mcps.rs  credential_vault.rs  hermes-soul.md  hermes_supervisor.rs  hotkey.rs  kernel_supervisor.rs  keychain.rs  keychain_subprocess.rs  lifecycle.rs  mod.rs  ollama_install.rs  opencode_supervisor.rs  pi_install.rs  provision_runner.rs  runtime_install.rs  tool_installer.rs  tray.rs  window.rs
(+519 files in other folders)
