[package]
name = "ctrl"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
default-run = "ctrl"

[lib]
name = "ctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = "3"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
keyring = "3"
directories = "5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
macos-accessibility-client = "0.0.1"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSResponder"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
