[package]
name = "ctrl"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
default-run = "ctrl"

[lib]
name = "ctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
# H-2026-05-13-001 sub-PR b — Tauri 2 plugins per ADR-002 §6 stack lock.
# tray + fs are built-in to Tauri 2 (no separate plugin). Updater added as
# spec'd by pwa-shell/spec.md §2; stronghold deferred until BYOK lands (P8).
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = "3"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
keyring = "3"
directories = "5"
# L1 Kernel deps
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "fs", "io-util", "process"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
ciborium = "0.2"           # CBOR encoding (ST-SS wire format)
rusqlite = { version = "0.32", features = ["bundled"] }  # event store
wasmtime = { version = "27", default-features = false, features = ["async", "cranelift"] }  # WASM sandbox (P2.7)
rmcp = { version = "1.6", features = ["client", "transport-child-process"] }  # MCP host (Anthropic official Rust SDK)
# H-2026-05-13-001 sub-PR d — ST-SS WS bridge promoted from spike.
tokio-tungstenite = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
# H-2026-05-14-002 mac/a — CGEventTap port lives in shell/hotkey.rs::mac_impl,
# powered by core-graphics + core-foundation. AX permission prompts are now
# handled by Tauri 2 (`tauri-plugin-os`) instead of macos-accessibility-client,
# so that crate was retired in mac/d. objc2-* stays for NSWindow level/vibrancy
# work in shell/window.rs.
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry"] }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSResponder"] }

[target.'cfg(target_os = "windows")'.dependencies]
# H-2026-05-13-001 sub-PR b/2 — lone-Ctrl WH_KEYBOARD_LL hook port from
# win/CTRL/Services/HotkeyService.cs. Already transitively in the tree via
# keyring/tauri; this is just the explicit feature surface we use.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
