[package]
name = "ctrl"
version = "0.1.773"
edition = "2021"
rust-version = "1.77"
default-run = "ctrl"

[lib]
name = "ctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
# H-2026-05-13-001 sub-PR b — Tauri 2 plugins per ADR-002 §6 stack lock.
# tray + fs are built-in to Tauri 2 (no separate plugin). Updater added as
# spec'd by pwa-shell/spec.md §2; stronghold deferred until BYOK lands (P8).
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml — Hermes config.yaml projection (decision 0007 §hermes-sync,
# 2026-06-19): CTRL owns Irisy's active provider; hermes reads its own
# ~/.hermes/config.yaml, so provider_set_active must merge the active
# provider into the YAML or Irisy keeps answering with the old model.
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = "3"
base64 = "0.22"
# Local-time aware date for sourcing_scheduler (daily cron). Pulled in
# transitively by the Tauri stack; declared explicitly so the kernel
# doesn't break if an upstream drops it. bao 2026-06-03.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2", features = ["json"] }
# H-2026-05-22 — async streaming HTTP for LLM adapters (Volc Ark / OpenAI-shape).
# rustls-tls keeps the build OpenSSL-free for portable Tauri bundles.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# Aligned with rmcp 1.7's reqwest (0.13) ONLY for the HTTP MCP client transport
# (ADR-002 §1.9.1) — its StreamableHttpClient impl is for the 0.13 Client type.
# Kept separate so CTRL's existing 0.12 usage (provider adapters) is untouched.
rmcp-reqwest = { package = "reqwest", version = "0.13", default-features = false, features = ["stream", "rustls"] }
toml = "0.8"
# Format-preserving TOML editing for the Codex BYO-CLI projection: a user's
# ~/.codex/config.toml is hand-edited, so we upsert our [mcp_servers.ctrl-kernel]
# table without clobbering their comments/layout (ADR-001 §4 projector). Already
# in the lock transitively; pinned direct so the projector can depend on it.
toml_edit = "0.22"
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
directories = "5"
# bao 2026-06-06: credential storage moved off the OS keychain into an
# encrypted file vault. Cocoon = chacha20-poly1305 envelope; sha2 for
# machine-bound key derivation; hostname for one of the entropy inputs.
cocoon = "0.4"
sha2 = "0.10"
hostname = "0.4"
# L1 Kernel deps
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "fs", "io-util", "process"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
ciborium = "0.2"           # CBOR encoding (ST-SS wire format)
rusqlite = { version = "0.32", features = ["bundled"] }  # event store
# wasmtime removed 2026-05-25 — see ADR-001 amendment 4th 校准 (v1 architecture
# design philosophy). v1 mcps are mixed-language subprocesses (Node/Python/
# Rust/Bash) which WASM cannot uniformly sandbox. Tauri 2 Capability + Isolation
# Pattern + CSP already provide plugin-host isolation; subprocess process
# isolation covers untrusted code. Re-evaluate via WasmEdge (8MB vs wasmtime
# 80MB) when v1.x ships user-uploaded executable code.
rmcp = { version = "1.7", features = [
    "client", "transport-child-process",
    "server", "macros", "schemars", "transport-streamable-http-server",  # MCP server (ADR-013)
    # HTTP MCP client transport (ADR-002 §1.9.1) — outbound to HTTP MCP servers
    # like the Obsidian Local REST API plugin's built-in /mcp/ endpoint.
    # `reqwest` brings the rustls TLS provider the client impl needs.
    "transport-streamable-http-client-reqwest", "reqwest",
] }
# axum hosts the rmcp StreamableHttpService + auth middleware (kernel-as-MCP-server).
axum = "0.8"
schemars = "1.0"
# H-2026-05-13-001 sub-PR d — ST-SS WS bridge promoted from spike.
tokio-tungstenite = "0.24"
# H-2026-05-19-001 / ADR-012 — SubprocessActor PTY substrate for Code Space tiles.
# Unix forkpty + Windows ConPTY 自动适配, wezterm 在生产用.
portable-pty = "0.9"
# ADR-002 substrate § vault v1 §8.3 (2026-06-01) — link/tag/orphan scanner
# (vault_graph.rs) + vault_watch file event source.
regex = "1"
walkdir = "2"
notify = "8"

[target.'cfg(target_os = "macos")'.dependencies]
# H-2026-05-14-002 mac/a — CGEventTap port lives in shell/hotkey.rs::mac_impl,
# powered by core-graphics + core-foundation. objc2-* drives NSWindow
# level/vibrancy work in shell/window.rs.
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSThread"] }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSResponder", "NSApplication"] }
# Local OCR via the macOS Vision framework (ADR-002 substrate § OCR = on-device
# Vision, no cloud). Drives screenshot text recognition in commands/screenshot.rs.
objc2-vision = { version = "0.2", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNTypes"] }
# Input Monitoring (kTCCServiceListenEvent) — required for the ListenOnly
# keyboard CGEventTap to receive events. Requested via CoreGraphics
# CGRequestListenEventAccess / CGPreflightListenEventAccess (declared as FFI
# in shell/hotkey.rs::mac_impl); CoreGraphics is already linked via
# core-graphics, so no extra crate is needed.

[target.'cfg(target_os = "windows")'.dependencies]
# H-2026-05-13-001 sub-PR b/2 — lone-Ctrl WH_KEYBOARD_LL hook port from
# win/CTRL/Services/HotkeyService.cs. Already transitively in the tree via
# keyring/tauri; this is just the explicit feature surface we use.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
