[project]
name = "ctrl-websearch"
version = "0.1.0"
description = "CTRL feature pack — multi-source web search with automatic failover (ddgs / searxng / brave / tavily / wikipedia)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CTRL team" }]
dependencies = ["mcp>=1.2", "ddgs>=6.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/soodooi/ctrl-websearch"

[project.scripts]
ctrl-websearch = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
